[package]
name = "youtube_media_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
colored = "2.0.4"
regex = "1.9.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
rstest = "0.18.1"
