[package]
name = "youtube_media_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
colored = "2.0.4"
env_logger = "0.10.0"
fancy-regex = "0.11.0"
fern = {version = "0.6.2", features = ["colored"]}
log = "0.4.19"
reqwest = { version = "0.11.19", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.0"
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.18.1"
